--- a/src/modules/calendar/assets/style/mixin.scss
+++ b/src/modules/calendar/assets/style/mixin.scss
@@ -59,3 +59,20 @@
     color: $textColor;
     transition: background 0.3s linear;
 }
+
+@mixin circle-bg-hover($bgColor: #eeeded, $textColor: #fff, $dimension: 100%) {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $dimension;
+    height: $dimension;
+    border-radius: 50%;
+    cursor: pointer;
+    color: $textColor;
+    transition: background 0.3s linear;
+    &:hover {
+        background-color: $bgColor;
+    }
+}
+
