address picker UI finish, debounce the remote call

--- a/src/modules/calendar/components/CalBody/calContent/yearLayout/yearLayout.scss
+++ b/src/modules/calendar/components/CalBody/calContent/yearLayout/yearLayout.scss
@@ -6,9 +6,6 @@ $containerPadding: 0 20px 0 0;
 .calbody-content-yearLayout-container {
   height: 100%;
   overflow: hidden;
-  @include customizeScrollbar(
-      '.calbody-content-yearLayout-container__months'
-  );
 
   &__months {
     display: flex;
@@ -18,6 +15,7 @@ $containerPadding: 0 20px 0 0;
     height: 100%;
     overflow-y: auto;
     padding: $containerPadding;
+    @include customizeScrollbar();
   }
 
   &__monthHeader {
