--- a/src/modules/calendar/components/CalBody/calContent/dayLayout/dayLayout.scss
+++ b/src/modules/calendar/components/CalBody/calContent/dayLayout/dayLayout.scss
@@ -13,14 +13,6 @@ $minGridDifferWidth: 80px;
     display: flex;
     flex-direction: column;
 
-    @include customizeScrollbar(
-        '.calbody-content-dayLayout-container__main'
-    );
-
-    @include customizeScrollbar(
-        '.calbody-content-dayLayout-container__columnbody'
-    );
-
     &__timeline {
         position: relative;
         flex-shrink: 0; //不缩小
@@ -46,6 +38,7 @@ $minGridDifferWidth: 80px;
         align-items: flex-start;
         overflow-y: auto;
         padding: 0 $columBodyMainPaddingRight 0 0;
+        @include customizeScrollbar();
     }
 
     &__headerWrapper {
@@ -65,6 +58,7 @@ $minGridDifferWidth: 80px;
                 #{$columBodyMainPaddingRight}
         );
         overflow-x: auto;
+        @include customizeScrollbar();
     }
 
     &__dayDifferWrapper {
