--- a/src/modules/calendar/components/header/langPicker/langPicker.scss
+++ b/src/modules/calendar/components/header/langPicker/langPicker.scss
@@ -1,24 +1,65 @@
-@import "../../../assets/style/theme.scss";
-@import "../../../assets/style/mixin.scss";
+@import '../../../assets/style/theme.scss';
+@import '../../../assets/style/mixin.scss';
+
+$itemsPadding: 0 14px;
+$optionsWidth: 70px;
 
 .header-langPicker-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 
-  &__trigger {
-    // padding-right: 8px;
-    @include select-effect();
-    &.btn {
-        border: 1px solid lighten($singleDayGridTodayBgColor, 10%);
-        color: lighten($singleDayGridTodayBgColor, 10%);
+    &__trigger {
+        @include select-effect();
+        &.btn {
+            border: 1px solid lighten($singleDayGridTodayBgColor, 10%);
+            color: lighten($singleDayGridTodayBgColor, 10%);
+        }
+
+        & span {
+            line-height: 26px;
+            padding: 0 8px;
+        }
     }
 
-    & span {
-      line-height: 26px;
-      padding: 0 8px;
+    &__content {
+        padding: 8px 0;
+        border-radius: 3px;
+        background: #fff;
+        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14),
+            0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
+
+        & .item-title {
+            line-height: 38px;
+        }
+
+        & .item-wrapper {
+            // color: $fontColor;
+            color: lighten($singleDayGridTodayBgColor, 10%);
+            display: flex;
+            align-items: center;
+            padding: $itemsPadding;
+            cursor: pointer;
+            transition: background 0.2s ease-in;
+
+            &:not(.is-disabled):hover {
+                // background: $hoverBgColor;
+                background: lighten($singleDayGridTodayBgColor, 40%);
+            }
+
+            &:not(.is-disabled):active {
+                background: $activeBgColor;
+            }
+        }
+
+        &-options {
+            width: $optionsWidth;
+
+            & .item-wrapper {
+                justify-content: space-between;
+            }
+        }
     }
-  }
 }
