work on react redux, init a saga for lang change, hang on the auto month change of date picker: prevProps's selectedDate is the same

--- a/src/modules/calendar/assets/style/theme.scss
+++ b/src/modules/calendar/assets/style/theme.scss
@@ -1,7 +1,7 @@
 /* common */
 $fontSizeBasic: 14px;
 $fontSizeExtraSmall: $fontSizeBasic * 0.7;
-$fontSizeSmall: $fontSizeBasic * 0.8;
+$fontSizeSmall: 12px;
 $fontSizeMedium: $fontSizeBasic * 1.2;
 $fontSizeGrand: $fontSizeBasic * 1.5;
 
@@ -131,6 +131,6 @@ a {
   color: #80868b;
 }
 
-.no-uselect {
+.no-select {
   user-select: none;
 }
