--- a/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/activityDefiner/activityDefiner.scss
+++ b/src/modules/calendar/components/common/calEventDefiner/calEventDefinerPanel/activityDefiner/activityDefiner.scss
@@ -30,7 +30,7 @@
     &__input {
         border-radius: 3px;
         &.is-focus {
-            background: #f1f3f4;
+            background: $weekLineBgColor;
         }
         & input {
             font-size: $fontSizeBasic;
