yearlayout: control popup's visibility; - layoutPicker: hide popover after click; - repeactPicker basic logic; tooltip

--- a/src/_packages_/components/tooltip/tooltip.scss
+++ b/src/_packages_/components/tooltip/tooltip.scss
@@ -5,13 +5,13 @@
 //   width: 100%;
 // }
 
-.react-tooltip {
-  position: absolute;
-  z-index: 1099;
-  display: block;
-  opacity: .9;
-  background: black;
-  color: white;
-  font-size: 12px;
-  padding: 5px;
+.bxu-tooltip {
+    position: absolute;
+    z-index: 1099;
+    display: block;
+    opacity: 0.9;
+    background: black;
+    color: white;
+    font-size: 12px;
+    padding: 5px;
 }
