studied on calEventDisplayer component design

--- a/src/modules/calendar/components/common/calEventPop/calEventPop.scss
+++ b/src/modules/calendar/components/common/calEventPop/calEventPop.scss
@@ -1,4 +1,4 @@
-@import '../../../../../assets/style/theme.scss';
+@import '../../../assets/style/theme.scss';
 
 .calevent-pop-container {
     pointer-events: none;
