work on year/weekLayout navToDaylayout, yearLayout datePicker item alignée

--- a/src/modules/calendar/components/calBody/shelf/shelf.scss
+++ b/src/modules/calendar/components/calBody/shelf/shelf.scss
@@ -44,4 +44,8 @@
         overflow-x: hidden;
         @include customizeScrollbar();
     }
+
+    &__datepicker {
+      margin: 0 10px;
+    }
 }
