--- a/src/_packages_/components/datePicker/components/DatePickerPanel/DatePickerPanel.scss
+++ b/src/_packages_/components/datePicker/components/DatePickerPanel/DatePickerPanel.scss
@@ -1,27 +1,27 @@
-$calendar-body-width: 210px;
+$calendar-body-width: 240px;
+$week-width: 20px;
 
 .bxu-pickerpanel-container {
   position: relative;
   width: $calendar-body-width;
   background: #fff;
-  padding: 6px 6px;
+  // padding: 6px 6px;
 
   &.is-popover {
     z-index: 999;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px, rgba(0, 0, 0, 0.15) 0px 8px 16px;
-}
+  }
 
   & ul {
     list-style-type: none;
   }
 
   & .calendar-body {
-
     & .row-data-container {
       display: flex;
 
       &--week {
-        flex-basis: 20px;
+        flex-basis: $week-width;
         flex-grow: 0;
         flex-shrink: 0;
         display: flex;
@@ -34,12 +34,13 @@ $calendar-body-width: 210px;
 
       &--main {
         position: relative;
+        width: 220px;
         display: flex;
         justify-content: center;
         flex-grow: 1;
         & .simple-calgrid-container {
-          width: $calendar-body-width / 7;
-          height: $calendar-body-width / 7;
+          width: ($calendar-body-width - $week-width) / 7;
+          height: ($calendar-body-width - $week-width) / 7;
         }
       }
 
