--- a/src/modules/calendar/components/CalBody/calContent/common/singleDayHeader/header.scss
+++ b/src/modules/calendar/components/CalBody/calContent/common/singleDayHeader/header.scss
@@ -1,29 +1,51 @@
-@import '../../../../../assets/style/theme.scss';
+@import "../../../../../assets/style/theme.scss";
 
 .singleDayCol-defaultHeader-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: $calBodyContentColumnLayoutHeaderHeight;
+  padding-top: 12px;
+
+  &.is-left {
+    align-items: flex-start;
+  }
+
+  &.is-right {
+    align-items: flex-end;
+  }
+
+  &.is-center {
+    align-items: center;
+  }
+
+  &__wrapper {
+    & > * {
+      display: block;
+    }
+    text-align: center;
+  }
+
+  &__dateContent {
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: $calBodyContentColumnLayoutHeaderHeight;
-    padding-top: 12px;
-
-    &.is-left {
-        align-items: flex-start;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    &.is-today {
+      background: $singleDayGridTodayBgColor;
+      color: #fff;
     }
-
-    &.is-right {
-        align-items: flex-end;
-    }
-
-    &.is-center {
-        align-items: center;
-    }
-
-    &__wrapper {
-      & > * {
-          display: block;
+    &.is-clickable {
+      cursor: pointer;
+      &:not(.is-today):hover {
+        background: $hoverBgColor;
+        transition: background 0.2s ease;
       }
-      text-align: center;
     }
+  }
 }
