--- a/src/modules/calendar/components/CalBody/calContent/yearLayout/yearLayout.scss
+++ b/src/modules/calendar/components/CalBody/calContent/yearLayout/yearLayout.scss
@@ -10,13 +10,21 @@ $containerPadding: 0 20px 0 0;
   &__months {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
     overflow-y: auto;
     padding: $containerPadding;
     @include customizeScrollbar();
   }
+
+  &__datepickerWrapper {
+    flex-basis: 25%;
+    flex-shrink: 1;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  } 
 
   &__monthHeader {
      text-align: left;
