work on cal day evt presenter

--- a/src/modules/calendar/assets/style/theme.scss
+++ b/src/modules/calendar/assets/style/theme.scss
@@ -49,6 +49,8 @@ $calEventDefinerLeftOffset: 50px;
 $calEventDefinerOptionHeight: 35px;
 $calEventDefinerOptionMainLeftPadding: 10px;
 
+$caldaySimpleevtItemHeight: 20px;
+
 .btn {
   border-radius: $btnBorderRadius;
   border: 1px solid $appFrameBorderColor;
@@ -134,3 +136,25 @@ a {
 .no-select {
   user-select: none;
 }
+
+@keyframes placeHolderShimmer{
+  0%{
+      background-position: -468px 0
+  }
+  100%{
+      background-position: 468px 0
+  }
+}
+
+.cal-animated-background {
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: placeHolderShimmer;
+  animation-timing-function: linear;
+  background: #f6f7f8;
+  background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+  background-size: 800px 104px;
+  position: relative;
+}
+
