continue work on caldaysimpleevtitem

--- a/src/modules/calendar/components/common/calDayEvtPresenter/calDaySimpleEvtItem/calDaySimpleEvtItem.scss
+++ b/src/modules/calendar/components/common/calDayEvtPresenter/calDaySimpleEvtItem/calDaySimpleEvtItem.scss
@@ -1,5 +1,9 @@
 @import '../../../../assets/style/theme.scss';
 
+.simpleItem-selected {
+  box-shadow: $calDayEvtPresenterShadow;
+}
+
 .calday-simpleevt-item {
     position: relative;
     display: flex;
