--- a/src/modules/calendar/components/common/calDayEvtPresenter/calDaySimpleEvtList/calDaySimpleEvtList.scss
+++ b/src/modules/calendar/components/common/calDayEvtPresenter/calDaySimpleEvtList/calDaySimpleEvtList.scss
@@ -14,13 +14,18 @@
         font-size: 11px;
         font-weight: 600;
         text-align: left;
-        height: $caldaySimpleevtItemHeight;
+        line-height: $caldaySimpleevtItemHeight;
         padding-left: 5px;
         cursor: pointer;
         border-radius: 3px;
+        margin: 2px 0;
 
         &:hover {
             background: $hoverBgColor;
+        }
+        
+        &.is-selected {
+            box-shadow: $calDayEvtPresenterShadow;
         }
     }
 }
