--- a/src/modules/calendar/components/common/calDayEvtPresenter/dayEvtPresenter.scss
+++ b/src/modules/calendar/components/common/calDayEvtPresenter/dayEvtPresenter.scss
@@ -23,28 +23,29 @@ $closeDimension: 30px;
     min-height: $containerMinHeight;
     max-height: $containerMaxHeight;
     overflow-y: auto;
+    overflow-x: hidden;
 
     &__main {
-        position: relative;
-        width: 100%; 
+      position: relative;
+      width: 100%;
     }
 
     &__dateDisplay {
-       position: relative;
-       width: 100%;
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-       &--showDay {
-         font-size: 11px;
-         color: $fontSubTitleColor;
-         line-height: $closeDimension;
-       }
-       &--showDate {
-         font-size: 26px;
-         font-weight: 400;
-        @include circle-bg-hover(#eeeded,  #80868b, 40px);
-       }
+      position: relative;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      &--showDay {
+        font-size: 11px;
+        color: $fontSubTitleColor;
+        line-height: $closeDimension;
+      }
+      &--showDate {
+        font-size: 26px;
+        font-weight: 400;
+        @include circle-bg-hover(#eeeded, #80868b, 40px);
+      }
     }
 
     & .content-loading {
@@ -53,11 +54,11 @@ $closeDimension: 30px;
     }
 
     &__events {
-        position: relative;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+      position: relative;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     &__close {
