--- a/src/modules/calendar/components/CalBody/calContent/weekLayout/weekLayout.scss
+++ b/src/modules/calendar/components/CalBody/calContent/weekLayout/weekLayout.scss
@@ -34,11 +34,13 @@ $minGridDifferWidth: 80px;
         position: relative;
         flex-grow: 1;
         display: flex;
-        height: calc(100% - #{$calBodyContentColumnLayoutHeaderHeight});
+        // height: calc(100% - #{$calBodyContentColumnLayoutHeaderHeight});
         align-items: flex-start;
         overflow-y: auto;
         padding: 0 $columBodyMainPaddingRight 0 0;
+        border-top: 1px solid $appFrameBorderColor;
         @include customizeScrollbar();
+        
     }
 
     &__headerWrapper {
