--- a/src/modules/calendar/components/calBody/calContent/common/singleHourGrid/singleHourGrid.scss
+++ b/src/modules/calendar/components/calBody/calContent/common/singleHourGrid/singleHourGrid.scss
@@ -8,9 +8,9 @@
   border-bottom: 1px solid $appFrameBorderColor;
   cursor: pointer;
 
-  &.is-first {
-    border-top: 1px solid $appFrameBorderColor;
-  }
+  // &.is-first {
+  //   border-top: 1px solid $appFrameBorderColor;
+  // }
 
   &__minSplitter {
     position: relative;
