--- a/src/modules/calendar/components/header/dateDisplayer/dateDisplayer.scss
+++ b/src/modules/calendar/components/header/dateDisplayer/dateDisplayer.scss
@@ -35,22 +35,22 @@
     justify-content: space-between;
     margin: 0 20px;
 
-    & .circle-wrapper {
-      position: relative;
-      width: 30px;
-      height: 30px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 50%;
-      color: $fontColor;
-      cursor: pointer;
-      transition: background 0.2s ease-in;
+    // & .circle-wrapper {
+    //   position: relative;
+    //   width: 30px;
+    //   height: 30px;
+    //   display: flex;
+    //   align-items: center;
+    //   justify-content: center;
+    //   border-radius: 50%;
+    //   color: $fontColor;
+    //   cursor: pointer;
+    //   transition: background 0.2s ease-in;
 
-      &:hover {
-        background: $hoverBgColor;
-      }
-    }
+    //   &:hover {
+    //     background: $hoverBgColor;
+    //   }
+    // }
   }
 
   &__monthDisplay {
