--- a/src/modules/calendar/components/CalBody/calContent/common/singleDayHeader/header.scss
+++ b/src/modules/calendar/components/CalBody/calContent/common/singleDayHeader/header.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
 
     &.is-left {
         align-items: flex-start;
@@ -50,5 +51,7 @@
         width: 100%;
         display: flex;
         padding-right: 5px;
+        border-left: 1px solid $appFrameBorderColor;
+        flex-grow: 1;
     }
 }
