--- a/src/modules/calendar/components/CalBody/calContent/weekLayout/weekLayout.scss
+++ b/src/modules/calendar/components/CalBody/calContent/weekLayout/weekLayout.scss
@@ -1,80 +1,85 @@
-@import '../../../../assets/style/theme.scss';
-@import '../../../../assets/style/mixin.scss';
+@import "../../../../assets/style/theme.scss";
+@import "../../../../assets/style/mixin.scss";
 
-$columnBodyOffset: $calBodyContentColumnLayoutSideWidth +
-    $calBodyContentColumnLayoutPlaceholderLineWidth;
+$columnBodyOffset: $calBodyContentColumnLayoutSideWidth + $calBodyContentColumnLayoutPlaceholderLineWidth;
 $columBodyMainPaddingRight: 12px;
 $minGridDifferWidth: 80px;
 
 .calbody-content-weekLayout-container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  &__timeline {
     position: relative;
-    height: 100%;
+    flex-shrink: 0; //不缩小
+    width: $calBodyContentColumnLayoutSideWidth;
+  }
+
+  &__placeholderLine {
+    position: relative;
+    flex-shrink: 0; //不缩小
+    width: $calBodyContentColumnLayoutPlaceholderLineWidth;
+
+    & > * {
+      border-bottom: 1px solid $appFrameBorderColor;
+      height: $singleHourGridMaxHeight;
+    }
+  }
+
+  &__main {
+    position: relative;
+    flex-grow: 1;
+    display: flex;
+    // height: calc(100% - #{$calBodyContentColumnLayoutHeaderHeight});
+    align-items: flex-start;
+    overflow-y: auto;
+    // padding: 0 $columBodyMainPaddingRight 0 0;
+    border-top: 1px solid $appFrameBorderColor;
+    @include customizeScrollbar();
+  }
+
+  &__headerWrapper {
+    position: relative;
     width: 100%;
     display: flex;
-    flex-direction: column;
+  }
 
-    &__timeline {
-        position: relative;
-        flex-shrink: 0; //不缩小
-        width: $calBodyContentColumnLayoutSideWidth;
+  &__headermain {
+    position: relative;
+    flex-grow: 1;
+    display: flex;
+    max-width: calc(100vw - #{$calBodyShelfWidth} - #{$calBodyLinkSideBarWidth} - #{$columnBodyOffset} - 8px);
+  }
+
+  &__headerDifferWrapper {
+    min-width: $minGridDifferWidth;
+  }
+
+  &__columnbody {
+    position: relative;
+    display: flex;
+    flex-grow: 1;
+    overflow-x: auto;
+    @include customizeScrollbar();
+  }
+
+  &__dayDifferWrapper {
+    min-width: $minGridDifferWidth;
+  }
+
+  &__timelineGrid {
+    position: relative;
+    width: 100%;
+    height: $singleHourGridMaxHeight;
+
+    & .timelineLabel__text {
+      position: absolute;
+      bottom: -4px;
+      left: 0;
+      right: 0;
     }
-
-    &__placeholderLine {
-        position: relative;
-        flex-shrink: 0; //不缩小
-        width: $calBodyContentColumnLayoutPlaceholderLineWidth;
-
-        & > * {
-            border-bottom: 1px solid $appFrameBorderColor;
-            height: $singleHourGridMaxHeight;
-        }
-    }
-
-    &__main {
-        position: relative;
-        flex-grow: 1;
-        display: flex;
-        // height: calc(100% - #{$calBodyContentColumnLayoutHeaderHeight});
-        align-items: flex-start;
-        overflow-y: auto;
-        padding: 0 $columBodyMainPaddingRight 0 0;
-        border-top: 1px solid $appFrameBorderColor;
-        @include customizeScrollbar();
-    }
-
-    &__headerWrapper {
-        position: relative;
-        width: 100%;
-        display: flex;
-        padding-right: $columBodyMainPaddingRight;
-    }
-
-    &__columnbody {
-        position: relative;
-        display: flex;
-        flex-grow: 1;
-        max-width: calc(
-            100vw - #{$calBodyShelfWidth} - #{$calBodyLinkSideBarWidth} - #{$columnBodyOffset} -
-                #{$columBodyMainPaddingRight}
-        );
-        overflow-x: auto;
-        @include customizeScrollbar();
-    }
-
-    &__dayDifferWrapper {
-        min-width: $minGridDifferWidth;
-    }
-
-    &__timelineGrid {
-        position: relative;
-        width: 100%;
-        height: $singleHourGridMaxHeight;
-
-        & .timelineLabel__text {
-            position: absolute;
-            bottom: -4px;
-            left: 0;
-            right: 0;
-        }
-    }
+  }
 }
