work on same timing evt overlap

--- a/src/modules/calendar/components/common/calDayEvtPresenter/calDaySimpleEvtItem/calDaySimpleEvtItem.scss
+++ b/src/modules/calendar/components/common/calDayEvtPresenter/calDaySimpleEvtItem/calDaySimpleEvtItem.scss
@@ -1,85 +1,87 @@
-@import "../../../../assets/style/theme.scss";
+@import '../../../../assets/style/theme.scss';
 
 $itemPadding: 10px;
 $itemMargin: 5px;
 
 .itemWrapper {
+    &.is-normal {
+        height: $caldaySimpleevtItemHeight;
+        position: relative;
+        padding-bottom: 2px;
 
-  &.is-normal {
-    height: $caldaySimpleevtItemHeight;
-    position: relative;
-    padding-bottom: 2px;
-  }
-  &.is-timing {
-    position: absolute;
-    width: 100%;
-  }
-  .simpleItem-selected {
-    box-shadow: $calDayEvtPresenterShadow;
-  }
+        & .is-timingEvt {
+            color: $fontColor;
+            &:hover {
+                background: $hoverBgColor;
+            }
+        }
+    }
+
+    &.is-timing {
+        position: absolute;
+        width: 100%;
+        & .is-timingEvt {
+            color: #fff;
+            opacity: 0.8;
+            &:hover {
+                background: $hoverBgColor;
+            }
+        }
+    }
+    .simpleItem-selected {
+        box-shadow: $calDayEvtPresenterShadow;
+    }
 }
 
 .calday-simpleevt-item {
-  position: relative;
-  display: flex;
-  align-items: center;
-  text-align: left;
-  width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    text-align: left;
+    width: 100%;
 
-  padding-left: $itemPadding;
-  border-radius: 4px;
-  height: 100%;
-  font-size: 11px;
-  cursor: pointer;
-  transition: all 0.2s ease;
-  overflow-x: hidden;
+    padding-left: $itemPadding;
+    border-radius: 4px;
+    height: 100%;
+    font-size: 11px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    overflow-x: hidden;
 
-  &.is-allday {
-    color: #fff;
-    &:hover {
-      opacity: 0.8;
+    &.is-allday {
+        color: #fff;
+        &:hover {
+            opacity: 0.8;
+        }
     }
-  }
 
-  &.is-timing {
-    color: $fontColor;
-    &:hover {
-      background: $hoverBgColor;
+    &.is-allday.is-reminder {
+        background: rgb(63, 81, 181);
     }
-  }
 
-  &.is-allday.is-reminder {
-    background: rgb(63, 81, 181);
-  }
-
-  & .cal-unit {
-    margin-right: $itemMargin;
-  }
-
-  & .cal-dot {
-    flex: 0 0 15px;
-    & b {
-      display: block;
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
+    & .cal-unit {
+        margin-right: $itemMargin;
     }
-  }
 
-  & .cal-date {
-    //   flex: 0 0 40px;
-  }
+    & .cal-dot {
+        flex: 0 0 15px;
+        & b {
+            display: block;
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+        }
+    }
 
-  & .cal-icon {
-    flex: 0 0 15px;
-  }
+    & .cal-icon {
+        flex: 0 0 15px;
+    }
 
-  & .cal-text {
-    flex: 1 1 0%;
-    font-weight: 600;
-    // padding-right: 5px;
-    text-overflow: clip;
-    white-space: nowrap;
-    overflow: hidden;
-  }
+    & .cal-text {
+        flex: 1 1 0%;
+        font-weight: 600;
+        text-overflow: clip;
+        white-space: nowrap;
+        overflow: hidden;
+    }
 }
